Refactor user creation tests to use email instead of login for validation