@@ -60,7 +60,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Lists;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -94,7 +93,6 @@ class UserControllerTest extends BaseMvcTest {
   @Test
   void createdUserByIdentityProvider() throws Exception  {
     CreateUserRQFull rq = new CreateUserRQFull();
-    rq.setLogin("testLogin");
     rq.setFullName("Test User");
     rq.setEmail("test@test.com");
     rq.setAccountRole("USER");
@@ -111,23 +109,22 @@ class UserControllerTest extends BaseMvcTest {
         CreateUserRS.class);
 
     assertNotNull(createUserRS.getId());
-    assertEquals(normalizeId(rq.getLogin()), createUserRS.getLogin());
+    assertEquals(normalizeId(rq.getEmail()), createUserRS.getLogin());
     var user = userRepository.findById(createUserRS.getId());
     assertTrue(user.isPresent());
-    assertEquals(user.get().getUserType(), UserType.SCIM);
+    assertEquals(UserType.SCIM, user.get().getUserType());
     assertNull(user.get().getPassword());
 
     var projectOptional = projectRepository.findByName("default_personal");
     assertTrue(projectOptional.isPresent());
     assertFalse(projectOptional.get().getUsers().stream()
-        .anyMatch(config -> config.getUser().getLogin().equals("testlogin")));
+        .anyMatch(config -> config.getUser().getLogin().equals("test@test.com")));
 
   }
 
   @Test
   void createUserByAdminPositive() throws Exception {
     CreateUserRQFull rq = new CreateUserRQFull();
-    rq.setLogin("testLogin");
     rq.setPassword("testPassword%123");
     rq.setFullName("Test User");
     rq.setEmail("test@test.com");
@@ -145,15 +142,15 @@ class UserControllerTest extends BaseMvcTest {
         CreateUserRS.class);
 
     assertNotNull(createUserRS.getId());
-    assertEquals(normalizeId(rq.getLogin()), createUserRS.getLogin());
+    assertEquals(normalizeId(rq.getEmail()), createUserRS.getLogin());
     assertTrue(userRepository.findById(createUserRS.getId()).isPresent());
 
     final Optional<Project> projectOptional = projectRepository.findByName("default_personal");
     assertTrue(projectOptional.isPresent());
     assertTrue(projectOptional.get().getUsers().stream()
-        .anyMatch(config -> config.getUser().getLogin().equals("testlogin")));
+        .anyMatch(config -> config.getUser().getLogin().equals("test@test.com")));
 
-    Optional<Project> personalProject = projectRepository.findByName("testlogin_personal");
+    Optional<Project> personalProject = projectRepository.findByName("test_test_com_personal");
     assertTrue(personalProject.isPresent(), "Personal project isn't created");
     Project project = personalProject.get();
 
@@ -169,7 +166,7 @@ class UserControllerTest extends BaseMvcTest {
     assertTrue(defaultIssueTypes.containsAll(project.getProjectIssueTypes()
         .stream()
         .map(ProjectIssueType::getIssueType)
-        .collect(Collectors.toList())));
+        .toList()));
   }
 
   @Test
@@ -200,7 +197,6 @@ class UserControllerTest extends BaseMvcTest {
   @Test
   void createUserPositive() throws Exception {
     CreateUserRQConfirm rq = new CreateUserRQConfirm();
-    rq.setLogin("testLogin");
     rq.setPassword("testPassword%123");
     rq.setFullName("Test User");
     rq.setEmail("test@domain.com");
@@ -213,7 +209,7 @@ class UserControllerTest extends BaseMvcTest {
         CreateUserRS.class);
 
     assertNotNull(createUserRS.getId());
-    assertEquals(normalizeId(rq.getLogin()), createUserRS.getLogin());
+    assertEquals(normalizeId(rq.getEmail()), createUserRS.getLogin());
     assertTrue(userRepository.findById(createUserRS.getId()).isPresent());
   }
 
